@@ -1,6 +1,7 @@
 
 	* bin/cygport.in (cygconf): Properly detect autoconf-2.6x configure.
 	(__src_fetch): Support local files not in working directory.
+	(__prepdoc): Search for Cygwin READMEs by PKG_HINTS names also.
 
 	* lib/gtkmm.cygclass (gtkmm_compile): Pass -no-undefined to LDFLAGS.
 
